--- a/fugaku_droplet_benchmark/HPS_benchmark/README
+++ b/fugaku_droplet_benchmark/HPS_benchmark/README
@@ -1,1 +1,5 @@
 Supporting Figure 8b
+
+## LAMMPS Benchmark
+
+For LAMMPS, we utilized the version dated 29-Oct-2020, and incorporated the implementation of the HPS model (https://github.com/azamat-rizuan/HPS-SS-model).
